--- a/roles/ubuntu-1604/tasks/main.yml
+++ b/roles/ubuntu-1604/tasks/main.yml
@@ -7,5 +7,8 @@
 
 - name: install docker
   package:
-    name: docker.io=1.12.6-0ubuntu1~16.04.1
+    name: "{{ item }}"
     state: present
+  with_items:
+    - docker.io=1.12.6-0ubuntu1~16.04.1
+    - socat
