--- a/addons/weave-daemonset-k8s-1.6.yaml
+++ b/addons/weave-daemonset-k8s-1.6.yaml
@@ -2,20 +2,51 @@ apiVersion: v1
 kind: List
 items:
   - apiVersion: v1
-    kind: Secret
-    metadata:
-      name: weave-net
-      namespace: kube-system
-    type: Opaque
-    data:
-      password: hu4ctGF9pYvk/TSHMi8hif9ZmnvwdO4833N/Z/So4bA=
-  - apiVersion: v1
     kind: ServiceAccount
     metadata:
       name: weave-net
       labels:
         name: weave-net
       namespace: kube-system
+  - apiVersion: rbac.authorization.k8s.io/v1beta1
+    kind: ClusterRole
+    metadata:
+      name: weave-net
+      labels:
+        name: weave-net
+    rules:
+      - apiGroups:
+          - ''
+        resources:
+          - pods
+          - namespaces
+          - nodes
+        verbs:
+          - get
+          - list
+          - watch
+      - apiGroups:
+          - extensions
+        resources:
+          - networkpolicies
+        verbs:
+          - get
+          - list
+          - watch
+  - apiVersion: rbac.authorization.k8s.io/v1beta1
+    kind: ClusterRoleBinding
+    metadata:
+      name: weave-net
+      labels:
+        name: weave-net
+    roleRef:
+      kind: ClusterRole
+      name: weave-net
+      apiGroup: rbac.authorization.k8s.io
+    subjects:
+      - kind: ServiceAccount
+        name: weave-net
+        namespace: kube-system
   - apiVersion: extensions/v1beta1
     kind: DaemonSet
     metadata:
