--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,9 @@ stages:
   - destroy
 
 variables:
-  DEV_TOOLS_IMAGE: ${CI_REGISTRY_IMAGE}-tools:v3
-  KUBECONFIG:      ${CI_PROJECT_DIR}/certificates/master/admin-kube-config
+  DEV_TOOLS_IMAGE:     ${CI_REGISTRY_IMAGE}-tools:v3
+  KUBECONFIG:          ${CI_PROJECT_DIR}/certificates/master/admin-kube-config
+  E2E_PARALLELIZATION: 25
 
 lint:
   stage: prepare
@@ -122,7 +123,7 @@ e2e tests 1/2:
   script:
     - ./etc/delete-e2e-namespaces.sh
     - cd /go/src/k8s.io/kubernetes
-    - go run hack/e2e.go -get=false -- -v -test -check-version-skew=false --provider=skeleton -test_args="--ginkgo.focus=\[Conformance\]|port-forward --ginkgo.skip=\[Serial\]|\[Flaky\]|\[Feature:.+\]" --ginkgo-parallel
+    - go run hack/e2e.go -get=false -- -v -test -check-version-skew=false --provider=skeleton -test_args="--ginkgo.focus=\[Conformance\]|port-forward --ginkgo.skip=\[Serial\]|\[Flaky\]|\[Feature:.+\]" --ginkgo-parallel=${E2E_PARALLELIZATION}
 
 e2e tests 2/2:
   stage: e2e serial
