be able to remove nodes in case of failure during provisioning

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ provision:
     - chmod 400 ~/.ssh/id_rsa ~/.ssh/id_rsa.pub
     - touch inventory
     - ansible-playbook ovh-provision.yml -e "OVH_NODES_PREFIX=ci-${CI_PIPELINE_ID} OVH_KEYPAIR_NAME=ci-runner" ${ANSIBLE_OPTIONS} || ( sleep 90 && false )
+    - cat inventory
   artifacts:
     paths:
       - inventory
