--- a/roles/ovh-destroy/tasks/main.yml
+++ b/roles/ovh-destroy/tasks/main.yml
@@ -9,5 +9,9 @@
   os_server:
     name: "{{ item }}"
     state: absent
-  with_items: "{{ groups.ovh }}"
+  with_items:
+    - "{{ OVH_NODES_PREFIX }}-node1"
+    - "{{ OVH_NODES_PREFIX }}-node2"
+    - "{{ OVH_NODES_PREFIX }}-node3"
+    - "{{ OVH_NODES_PREFIX }}-node4"
   when: item == OVH_NODE | default(item)
