added missing docker restart handler

--- a/roles/node/handlers/main.yml
+++ b/roles/node/handlers/main.yml
@@ -8,3 +8,11 @@
     name: kubelet
     enabled: yes
     state: restarted
+    enabled: yes
+
+- name: restart docker
+  service:
+    name: docker
+    state: restarted
+    enabled: yes
+
