--- a/roles/docker/handlers/main.yml
+++ b/roles/docker/handlers/main.yml
@@ -1,4 +1,9 @@
 - name: restart docker
-  service:
+  systemd:
     name: docker
+    daemon_reload: yes
     state: restarted
+    enabled: yes
+
+
+
