setting resource limits and parameters depending on cluster and node size

--- a/group_vars/ovh.yml
+++ b/group_vars/ovh.yml
@@ -4,21 +4,6 @@ ansible_ssh_user: ubuntu
 ansible_ssh_private_key_file: ~/.ssh/id_rsa
 ansible_become: true
 
-apiserver_requests_cpu: 100m
-apiserver_requests_memory: 700Mi
-apiserver_limits_cpu: 1000m
-apiserver_limits_memory: 700Mi
-controller_manager_requests_cpu: 50m
-controller_manager_requests_memory: 100Mi
-controller_manager_limits_cpu: 1000m
-controller_manager_limits_memory: 100Mi
-scheduler_requests_cpu: 50m
-scheduler_requests_memory: 100Mi
-scheduler_limits_cpu: 1000m
-scheduler_limits_memory: 100Mi
-etcd_requests_cpu: 100m
-etcd_requests_memory: 700Mi
-etcd_limits_cpu: 1000m
-etcd_limits_memory: 700Mi
-
-pods_per_node: 60
+kubelet_max_pods: 30
+kubelet_kube_reserved:   cpu=100m,memory=200Mi
+kubelet_system_reserved: cpu=200m,memory=100Mi
