--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -15,3 +15,5 @@ etcd_config_dir:   "{{ playbook_dir }}/roles/etcd-certificates/files"
 master_cert_dir:   "{{ playbook_dir }}/certificates/master"
 master_config_dir: "{{ playbook_dir }}/roles/master-certificates/files"
 addons_cert_dir:   "{{ playbook_dir }}/certificates/addons"
+
+nodes_count: "{{ groups['all'] | length }}"
