--- a/roles/etcd/defaults/main.yml
+++ b/roles/etcd/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
-etcd_requests_cpu: 1000m
-etcd_requests_memory: 1000Mi
-etcd_limits_cpu: 1000m
-etcd_limits_memory: 1000Mi
+etcd_requests_cpu:    100m
+etcd_requests_memory: "{{ 120 + (nodes_count|int * kubelet_max_pods * 2) }}Mi"
+etcd_limits_cpu:      1000m
+etcd_limits_memory:   "{{ etcd_requests_memory }}"
+etcd_snapshot_count:  2000
