--- a/roles/master/defaults/main.yml
+++ b/roles/master/defaults/main.yml
@@ -1,15 +1,20 @@
 ---
-apiserver_requests_cpu: 1000m
-apiserver_requests_memory: 1000Mi
-apiserver_limits_cpu: 1000m
-apiserver_limits_memory: 1000Mi
-controller_manager_requests_cpu: 1000m
-controller_manager_requests_memory: 200Mi
-controller_manager_limits_cpu: 1000m
-controller_manager_limits_memory: 200Mi
-scheduler_requests_cpu: 500m
-scheduler_requests_memory: 200Mi
-scheduler_limits_cpu: 500m
-scheduler_limits_memory: 200Mi
+apiserver_max_requests_inflight:          "{{ nodes_count|int * kubelet_max_pods / 2 }}"
+apiserver_max_mutating_requests_inflight: "{{ nodes_count|int * kubelet_max_pods / 3 }}"
+apiserver_limit_target_ram_mb:            "{{ 120 + (nodes_count|int * kubelet_max_pods * 2) }}"
 
-pods_per_node: 60
+scheduler_api_qps:   "{{ apiserver_max_requests_inflight|int * 0.2 }}"
+scheduler_api_burst: "{{ apiserver_max_requests_inflight|int * 0.3 }}"
+
+apiserver_requests_cpu:             100m
+apiserver_requests_memory:          "{{ 20 + (apiserver_limit_target_ram_mb|int * 1.1) | int }}Mi"
+apiserver_limits_cpu:               1000m
+apiserver_limits_memory:            "{{ apiserver_requests_memory }}"
+controller_manager_requests_cpu:    50m
+controller_manager_requests_memory: "{{ 20 + (nodes_count|int * kubelet_max_pods) }}Mi"
+controller_manager_limits_cpu:      1000m
+controller_manager_limits_memory:   "{{ controller_manager_requests_memory }}"
+scheduler_requests_cpu:             50m
+scheduler_requests_memory:          "{{ 20 + (nodes_count|int * kubelet_max_pods) }}Mi"
+scheduler_limits_cpu:               1000m
+scheduler_limits_memory:            "{{ scheduler_requests_memory }}"
