--- a/roles/node/defaults/main.yml
+++ b/roles/node/defaults/main.yml
@@ -10,4 +10,7 @@ cni_packages:
     checksum: sha256:f04339a21b8edf76d415e7f17b620e63b8f37a76b2f706671587ab6464411f2d
     local_file: /opt/cni-plugins.tar.gz
     creates: /opt/cni/bin/portmap
-    
+
+kubelet_max_open_files:  250000
+kubelet_kube_reserved:   cpu=1,memory=2Gi
+kubelet_system_reserved: cpu=500m,memory=1Gi
