--- a/deploy.yml
+++ b/deploy.yml
@@ -8,6 +8,10 @@
   roles:
     - { role: ubuntu-1604 }
 
+- hosts: vagrant
+  roles:
+    - { role: vagrant }
+
 - hosts: all
   roles:
     - { role: docker }
