--- a/roles/ubuntu-1604/tasks/main.yml
+++ b/roles/ubuntu-1604/tasks/main.yml
@@ -5,10 +5,22 @@
   register: install_python_result
   changed_when: "'/usr/bin/python found' not in install_python_result.stdout"
 
-- name: install docker
+- name: add docker deb repo key
+  apt_key:
+    id: 0EBFCD88
+    url: https://download.docker.com/linux/ubuntu/gpg
+    state: present
+
+- name: add docker deb repo
+  apt_repository:
+    repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable"
+    state: present
+    filename: docker
+
+- name: install packages
   package:
     name: "{{ item }}"
     state: present
   with_items:
-    - docker.io=1.12.6-0ubuntu1~16.04.1
+    - docker-ce=17.03.2~ce-0~ubuntu-xenial
     - socat
