--- a/deploy.yml
+++ b/deploy.yml
@@ -8,14 +8,11 @@
   roles:
     - { role: ubuntu-1604 }
 
-- hosts: vagrant
-  roles:
-    - { role: vagrant }
-
 - hosts: all
   roles:
     - { role: docker }
     - { role: node }
+    - { role: disable-swap }
 
 - hosts: etcds
   pre_tasks:
