local persistant volumes
* enabled persistent-local-volumes feature
* create local file-as-device-mounts via ansible
* deployed persistent-local-volumes daemonset
* disable RBAC for testing environments
* file as device to provide pre provisioned volumes (fixed size, guarantied)
* quota on xfs to provide dynamic volumes (administrator can change size, storage can be over provisioned)
* configurable authorization_mode and feature_gates

NOTES:
* :latest fixes a parse config bug in :v1.0.1

--- a/deploy.yml
+++ b/deploy.yml
@@ -8,9 +8,14 @@
   roles:
     - { role: ubuntu-1604 }
 
+- hosts: testing
+  roles:
+    - { role: fake-xfs-filesystem }
+
 - hosts: all
   roles:
     - { role: disable-swap }
+    - { role: local-volumes }
     - { role: docker }
     - { role: node }
 
