configurable ovh server regions / defaults to SBG3

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ variables:
   DEV_TOOLS_IMAGE:     ${CI_REGISTRY_IMAGE}-tools:v4
   KUBECONFIG:          ${CI_PROJECT_DIR}/certificates/master/admin-kube-config
   E2E_PARALLELIZATION: 25
+  OVH_REGION_NAME:     SBG3
 
 lint:
   stage: prepare
@@ -27,7 +28,7 @@ provision:
     - echo ${SSH_KEY_PUBLIC}  | base64 -d > ~/.ssh/id_rsa.pub
     - chmod 400 ~/.ssh/id_rsa ~/.ssh/id_rsa.pub
     - touch inventory
-    - ansible-playbook ovh-provision.yml -e "OVH_NODES_PREFIX=ci-${CI_PIPELINE_ID} OVH_KEYPAIR_NAME=ci-runner" ${ANSIBLE_OPTIONS}
+    - ansible-playbook ovh-provision.yml -e "region_name=${OVH_REGION_NAME} OVH_NODES_PREFIX=ci-${CI_PIPELINE_ID} OVH_KEYPAIR_NAME=ci-runner" ${ANSIBLE_OPTIONS}
     - ansible-playbook certificates.yml ${ANSIBLE_OPTIONS}
     - cat inventory
   artifacts:
