option to choose ci vm provider / use make for ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,13 @@ stages:
   - destroy
 
 variables:
-  DEV_TOOLS_IMAGE:     ${CI_REGISTRY_IMAGE}-tools:v4
-  KUBECONFIG:          ${CI_PROJECT_DIR}/certificates/master/admin-kube-config
-  E2E_PARALLELIZATION: 25
-  OVH_REGION_NAME:     SBG3
+  DEV_TOOLS_IMAGE:            ${CI_REGISTRY_IMAGE}-tools:v4
+  KUBECONFIG:                 ${CI_PROJECT_DIR}/certificates/master/admin-kube-config
+  E2E_PARALLELIZATION:        25
+  OVH_REGION_NAME:            SBG3
+  CI_PROVISION:               ovh
+  OVH_NODES_PREFIX:           ci-${CI_PIPELINE_ID}
+  DIGITAL_OCEAN_NODES_PREFIX: ci-${CI_PIPELINE_ID}
 
 lint:
   stage: prepare
@@ -26,10 +29,11 @@ provision:
     - mkdir ~/.ssh
     - echo ${SSH_KEY_PRIVATE} | base64 -d > ~/.ssh/id_rsa
     - echo ${SSH_KEY_PUBLIC}  | base64 -d > ~/.ssh/id_rsa.pub
+    - export OVH_KEYPAIR_NAME=ci-runner
     - chmod 400 ~/.ssh/id_rsa ~/.ssh/id_rsa.pub
     - touch inventory
-    - ansible-playbook ovh-provision.yml -e "region_name=${OVH_REGION_NAME} OVH_NODES_PREFIX=ci-${CI_PIPELINE_ID} OVH_KEYPAIR_NAME=ci-runner" ${ANSIBLE_OPTIONS}
-    - ansible-playbook certificates.yml ${ANSIBLE_OPTIONS}
+    - make ${CI_PROVISION}-provision
+    - make certificates
     - cat inventory
   artifacts:
     paths:
@@ -41,14 +45,14 @@ destroy:
   image: ${DEV_TOOLS_IMAGE}
   retry: 2
   script:
-    - ansible-playbook ovh-destroy.yml -e "OVH_NODES_PREFIX=ci-${CI_PIPELINE_ID}" ${ANSIBLE_OPTIONS}
+    - make ${CI_PROVISION}-destroy
 
 destroy now:
   stage: destroy
   image: ${DEV_TOOLS_IMAGE}
   retry: 2
   script:
-    - ansible-playbook ovh-destroy.yml -e "OVH_NODES_PREFIX=ci-${CI_PIPELINE_ID}" ${ANSIBLE_OPTIONS}
+    - make ${CI_PROVISION}-destroy
   when: manual
 
 deploy:
