--- a/roles/master-certificates/tasks/main.yml
+++ b/roles/master-certificates/tasks/main.yml
@@ -45,9 +45,9 @@
     chdir: "{{ master_cert_dir }}"
     creates: "kube-proxy-key.pem"
 
-- name: set up admin config file
+- name: set up kube-proxy file
   shell: |
-    kubectl --kubeconfig=kube-proxy-config config set-cluster default --server=https://{{ hostvars[groups['masters'][0]]['ansible_host'] }}:6443 --embed-certs=true --certificate-authority=ca.pem &&
+    kubectl --kubeconfig=kube-proxy-config config set-cluster default --server=https://127.0.0.1:6443 --embed-certs=true --certificate-authority=ca.pem &&
     kubectl --kubeconfig=kube-proxy-config config set-credentials default --embed-certs=true --client-certificate=admin.pem --client-key=admin-key.pem &&
     kubectl --kubeconfig=kube-proxy-config config set-context default --cluster=default --user=default &&
     kubectl --kubeconfig=kube-proxy-config config use-context default
