--- a/roles/master-certificates/tasks/main.yml
+++ b/roles/master-certificates/tasks/main.yml
@@ -39,6 +39,17 @@
     chdir: "{{ master_cert_dir }}"
     creates: admin-kube-config
 
+- name: set up user config files
+  shell: |
+    kubectl --kubeconfig={{ item.username }}-user-kube-config config set-cluster {{ cluster.name }} --server=https://{{ hostvars[groups['masters'][0]]['ansible_host'] }}:6443 --embed-certs=true --certificate-authority=ca.pem &&
+    kubectl --kubeconfig={{ item.username }}-user-kube-config config set-credentials {{ item.username }} --token={{ item.token }} &&
+    kubectl --kubeconfig={{ item.username }}-user-kube-config config set-context {{ cluster.name }} --cluster={{ cluster.name }} --user={{ item.username }} &&
+    kubectl --kubeconfig={{ item.username }}-user-kube-config config use-context {{ cluster.name }}
+  args:
+    chdir: "{{ master_cert_dir }}"
+    creates: "{{ item.username }}-user-kube-config"
+  with_items: "{{ cluster.users }}"
+
 - name: set up kube-proxy certificate
   shell: cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config={{ master_config_dir }}/config.json -profile=kubernetes {{ master_config_dir }}/kube-proxy.json | cfssljson -bare kube-proxy
   args:
