--- a/addons/local-volume-provisioner.yml
+++ b/addons/local-volume-provisioner.yml
@@ -8,12 +8,9 @@ items:
       namespace: kube-system
     data:
       storageClassMap: |
-        local-storage-dynamic:
-          hostDir: "/mnt/disks/dynamic"
-          mountDir: "/local-disks-dynamic"
-        local-storage-pre-provision:
-          hostDir: "/mnt/disks/pre-provision"
-          mountDir: "/local-disks-pre-provision"
+        local-storage:
+          hostDir: "/mnt/disks/local-storage"
+          mountDir: "/local-storage"
   - apiVersion: v1
     kind: ServiceAccount
     metadata:
