labeled local volumes
* delete local-volumes provisioner before kubernetes deployment
* use structure of quotas in volume templates in xfs locations
* moved local volumes on host to /var/lib/local-storage
* mount from quotas to /var/lib/local-storage via --bind
* added labeled local volumes

--- a/addons/local-volume-provisioner.yml
+++ b/addons/local-volume-provisioner.yml
@@ -9,7 +9,7 @@ items:
     data:
       storageClassMap: |
         local-storage:
-          hostDir: "/mnt/disks/local-storage"
+          hostDir: "/var/lib/local-storage"
           mountDir: "/local-storage"
   - apiVersion: v1
     kind: ServiceAccount
