--- a/certificates.yml
+++ b/certificates.yml
@@ -1,6 +1,18 @@
 ---
-- hosts: localhost
-  roles:
-    - { role: etcd-certificates }
-    - { role: master-certificates }
-    - { role: weave-certificates }
+- hosts: masters
+  tasks:
+    - name: create etcd certificates
+      include_role:
+        name: etcd-certificates
+      delegate_to: localhost
+      run_once: true
+    - name: create kubernetes certificates
+      include_role:
+        name: master-certificates
+      delegate_to: localhost
+      run_once: true
+    - name: create weave certificates
+      include_role:
+        name: weave-certificates
+      delegate_to: localhost
+      run_once: true
