--- a/roles/master-certificates/tasks/main.yml
+++ b/roles/master-certificates/tasks/main.yml
@@ -2,9 +2,12 @@
 
 - name: set up a Certificate directory
   file:
-    path: "{{ master_cert_dir }}"
+    path: "{{ item }}"
     state: directory
     recurse: true
+  items:
+    - "{{ master_cert_dir }}"
+    - "{{ users_cert_dir }}"
 
 - name: render master certificate configuration
   template:
@@ -78,3 +81,14 @@
   args:
     chdir: "{{ master_cert_dir }}"
     creates: "master-key.pem"
+
+- name: set up user config files
+  shell: |
+    kubectl --kubeconfig={{ item.username }}-kube-config config set-cluster {{ cluster.name }} --server=https://{{ hostvars[groups['masters'][0]]['ansible_host'] }}:6443 --embed-certs=true --certificate-authority={{ master_cert_dir }}/ca.pem &&
+    kubectl --kubeconfig={{ item.username }}-kube-config config set-credentials {{ item.username }} --token={{ item.token }} &&
+    kubectl --kubeconfig={{ item.username }}-kube-config config set-context {{ cluster.name }} --cluster={{ cluster.name }} --user={{ item.username }} &&
+    kubectl --kubeconfig={{ item.username }}-kube-config config use-context {{ cluster.name }}
+  args:
+    chdir: "{{ users_cert_dir }}"
+    creates: "{{ item.username }}-kube-config"
+  with_items: "{{ cluster.users }}"
