--- a/roles/local-volumes/defaults/main.yml
+++ b/roles/local-volumes/defaults/main.yml
@@ -1,2 +1,6 @@
-local_volumes_all_nodes: []
-local_volumes_node_specific: []
+local_volumes_all_nodes:
+  managed: []
+  labeled: []
+local_volumes_node_specific:
+  managed: []
+  labeled: []
